11.pihole/pihole/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  name: web
